--- a/article/report.tex
+++ b/article/report.tex
@@ -82,7 +82,8 @@ tabsize=2
 	<++>
 
 	\section{Introduction}
-	<++>
+	\paragraph{} In an era of LLM-based revolution, many are exploring the endless possibilities of using artificial intelligence to aid in software development. This comes as no surprise considering the astounding need for software in nearly every aspect of modern industry. With a dramatic increase in the need for software, some of the hottest topics being explored is the potential of enhancing the software development process, creating new tools as well as enhancing the old, and even automating certain aspects of writing code. 
+	\paragraph{} In this paper, we detail our experience with training a model using machine learning for the purpose of generating Python documentation. We discuss other similar works, compare our results, and discuss applications and potential improvements as well as viable future work. With so much recent progress in the field of AI, models like ours might drastically change the way we think about and approach software development.
 
 	\section{Related Work}
 	<++>
