Add related works section

--- a/article/report.tex
+++ b/article/report.tex
@@ -88,13 +88,8 @@ tabsize=2
 	\paragraph{} In this paper, we detail our experience with training a model using machine learning for the purpose of generating Python documentation. We discuss other similar works, compare our results, and discuss applications and potential improvements as well as viable future work. With so much recent progress in the field of AI, models like ours might drastically change the way we think about and approach software development.
 
 	\section{Related Work}
-		\cite{google2023codeReviewML}
-		\cite{qodoAI2024idePlugin}
-		\cite{google2023aiFuzzing}
-		\cite{cso2024aiFuzzing}
-		\cite{chen2023oodGeneralization}
-		\cite{awekrx2024autodoc}
-		\cite{wiggers2023largeModels}
+	\paragraph{} Several recent studies and developments in the field of artificial intelligence and software development have highlighted significant advancements. These include the use of ML in resolving code review comments \cite{google2023codeReviewML}, the introduction of IDE plugins for AI-assisted development \cite{qodoAI2024idePlugin}, innovations in AI-powered fuzzing \cite{google2023aiFuzzing, cso2024aiFuzzing}, research into the out-of-distribution generalization of pre-trained language models \cite{chen2023oodGeneralization}, efforts in automated documentation with ChatGPT \cite{awekrx2024autodoc}, and the enhancement of large language models for multi-modal research synthesis \cite{wiggers2023largeModels}.
+
 
 	\section{Method}
 	<++>
