Prove intro and describe article files

--- a/article/refs.bib
+++ b/article/refs.bib
@@ -68,3 +68,14 @@
   url          = {https://www.emerald.com/insight/content/doi/10.1108/s1548-643520190000016007/full/html},
   note         = {Accessed: 2024-12-06}
 }
+
+@article{shietal2020IoT_AI,
+  author={Shi, Feifei and Ning, Huansheng and Huangfu, Wei and Zhang, Fan and Wei, Dawei and Hong, Tao and Daneshmand, Mahmoud},
+  journal={IEEE Network}, 
+  title={Recent Progress on the Convergence of the Internet of Things and Artificial Intelligence}, 
+  year={2020},
+  volume={34},
+  number={5},
+  pages={8-15},
+  keywords={Artificial intelligence;Convergence;Sensors;Internet of Things;Neural networks;Routing;Smart cities},
+  doi={10.1109/MNET.011.2000009}}
