--- a/article/report.tex
+++ b/article/report.tex
@@ -85,7 +85,7 @@ tabsize=2
 
 	\section{Introduction}
 	\paragraph{} In an era of LLM-based revolution, many are exploring the endless possibilities of using artificial intelligence to aid in software development. This comes as no surprise considering the astounding need for software in nearly every aspect of modern industry. \cite{emerald2019csrImpact} With a dramatic increase in the need for software, some of the hottest topics being explored are the potential of enhancing the software development process, creating new tools as well as enhancing the old, and even automating certain aspects of writing code (See Section 3: Related Work). 
-	\paragraph{} In this paper, we detail our experience with training a model using machine learning for the purpose of generating Python documentation. We discuss other similar works, compare our results, and discuss applications and potential improvements as well as viable future work. With so much recent progress in the field of AI, models like ours might drastically change the way we think about and approach software development.
+	\paragraph{} In this paper, we detail our experience with training a model using machine learning for the purpose of generating Python documentation. We discuss other similar works, compare our results, and discuss applications and potential improvements as well as viable future work. With so much recent progress in the field of AI \cite{shietal2020IoT_AI}, models like ours might drastically change the way we think about and approach software development.
 
 	\section{Related Work}
 	\paragraph{} Several recent studies and developments in the field of artificial intelligence and software development have highlighted significant advancements. These include the use of ML in resolving code review comments \cite{google2023codeReviewML}, the introduction of IDE plugins for AI-assisted development \cite{qodoAI2024idePlugin}, innovations in AI-powered fuzzing \cite{google2023aiFuzzing, cso2024aiFuzzing}, research into the out-of-distribution generalization of pre-trained language models \cite{chen2023oodGeneralization}, efforts in automated documentation with ChatGPT \cite{awekrx2024autodoc}, and the enhancement of large language models for multi-modal research synthesis \cite{wiggers2023largeModels}.
