Add future works section

--- a/article/report.tex
+++ b/article/report.tex
@@ -114,7 +114,8 @@ tabsize=2
 	<++>
 
 	\section{Future Work}
-	<++>
+	\paragraph{} Our greatest challenges with this experiment were definitely a lack of computational resources and time. We would like to explore the potential of using a larger dataset, as well as training for more epochs. We would also like to explore the potential of using a larger model, such as the Salesforce/codet5-large model. We would also like to explore the potential of using a different optimizers, such as the SGD optimizer. With more time and computational power, we might be able to find a convergence on a more optimal solution using SGD. We might also try SGD with momentum if we still find ourselves limited on resources in the future to help reach a balance between optimal convergence and resource usage.
+	\paragraph{} We would also like to perform more tests and analysis on our model to better understand its performance and potential improvements. This would help us compare our model to other works and evaluate where our model needs improvement, as well as where it really excels. Perhaps performing this analysis would help us and other researchers develop better and better models for the purpose of intelligent Python documentation generation.
 
 	\pagebreak
 	\bibliographystyle{plain}
