Add results draft

--- a/article/report.tex
+++ b/article/report.tex
@@ -105,7 +105,7 @@ tabsize=2
 	\paragraph{} We unfortunately found that higher values used as hyper parameters, particularly those used in the number of epochs, drastically increased our training time. With our limited time, we decided to move forward with a proof-of-concept using a number of epochs equal to one with zero warmup steps being used. Using CUDA, we trained our model primarily on our available GPUs using the AdamW optimizer.
 
 	\section{Results}
-	<++>
+	\paragraph{} Even with only a single epoch, we were able to generage the following docstring: ``Wrap an environment into a deepmind environment.'' This is a promising result, as it shows that our model is able to generate a docstring that is both accurate and concise. We believe that with more training, our model could generate even more accurate and useful docstrings.
 
 	\section{Discussion}
 	<++>
