Add discussion section

--- a/article/refs.bib
+++ b/article/refs.bib
@@ -79,3 +79,15 @@
   pages={8-15},
   keywords={Artificial intelligence;Convergence;Sensors;Internet of Things;Neural networks;Routing;Smart cities},
   doi={10.1109/MNET.011.2000009}}
+
+@article{ghassemiazghandi2024evaluation,
+  title={An Evaluation of ChatGPT's Translation Accuracy Using BLEU Score},
+  author={Mozhgan Ghassemiazghandi},
+  journal={Theory and Practice in Language Studies},
+  volume={14},
+  number={4},
+  pages={500--507},
+  year={2024},
+  publisher={Academy Publication},
+  doi={10.17507/tpls.1404.07}
+}
