--- a/article/report.tex
+++ b/article/report.tex
@@ -108,7 +108,7 @@ tabsize=2
 	\paragraph{} Even with only a single epoch, we were able to generage the following docstring: ``Wrap an environment into a deepmind environment.'' This is a promising result, as it shows that our model is able to generate a docstring that is both accurate and concise. We believe that with more training, our model could generate even more accurate and useful docstrings.
 
 	\section{Discussion}
-	<++>
+	\paragraph{} Our model scores horribly compared to other general models such as ChatGPT-4 with a BLEU score of 0.88 and MateCat with a BLEU score of 0.82. \cite{ghassemiazghandi2024evaluation} This is to be expected, however, as our model was trained with a very limited number of epochs on a smaller dataset. It is interesteing to observe that we still got a competent docstring that, while not fully accurate, still conveys the general idea of the code. 
 
 	\section{Conclusion}
 	<++>
