Add results section final draft

--- a/article/report.tex
+++ b/article/report.tex
@@ -105,7 +105,7 @@ tabsize=2
 	\paragraph{} We unfortunately found that higher values used as hyper parameters, particularly those used in the number of epochs, drastically increased our training time. With our limited time, we decided to move forward with a proof-of-concept using a number of epochs equal to one with zero warmup steps being used. Using CUDA, we trained our model primarily on our available GPUs using the AdamW optimizer.
 
 	\section{Results}
-	\paragraph{} Even with only a single epoch, we were able to generage the following docstring: ``Wrap an environment into a deepmind environment.'' This is a promising result, as it shows that our model is able to generate a docstring that is both accurate and concise. We believe that with more training, our model could generate even more accurate and useful docstrings.
+	\paragraph{} Even with only a single epoch, we were able to generate the following docstring: “Wrap an environment into a deepmind environment.” , with the True string being “ Configure environment for DeepMind-style Atari.” Even though it is not perfect, this is a promising result, as it shows that our model is able to generate a docstring that is both accurate and concise. We believe that with more training, our model could generate even more accurate and useful docstrings. Using a simple Evaluation: Score = (Number of overlapping words)/(Total Unique Words in Both strings) the score is 0.09 or 9\%. Using Bleu evaluation, geometric mean of modified precision scores multiplied by a brevity penalty(Penalizes short candidate sentences) we are getting a 0.033 or a 3.3\% and using rouge (Recall-Oriented Understudy for Gisting) Evaluation, which is focuses on recall, precision, and F-measure of n-gram overlaps, as well as longest common subsequences(rougeL): (rouge1, .285), (rouge2, 0), (rougeL, .285).
 
 	\section{Discussion}
 	\paragraph{} Our model scores horribly compared to other general models such as ChatGPT-4 with a BLEU score of 0.88 and MateCat with a BLEU score of 0.82. \cite{ghassemiazghandi2024evaluation} This is to be expected, however, as our model was trained with a very limited number of epochs on a smaller dataset. It is interesteing to observe that we still got a competent docstring that, while not fully accurate, still conveys the general idea of the code. 
