Add abstract section

--- a/article/report.tex
+++ b/article/report.tex
@@ -81,7 +81,8 @@ tabsize=2
 	\maketitle
 
 	\section*{Abstract}
-	<++>
+	\paragraph{} The field of artificial intelligence has seen massive strides forward in recent years. As our world relies more and more on software, the prospect of using artificial intelligence during the development process is a fascinating one with massive potential. We know of the utility that can be gained from large language models trained on supercomputers. However, if massive resources are typically required for useful model generation, exactly where is the floor when it comes to engineering something useful? 
+	\paragraph{} The purpose of this paper is to demonstrate a proof-of-concept with building a specialized language model for generating Python code documentation. Our small team was able to generate a competent model using very limited resources. While certainly not on-par with the likes of ChatGPT-4, our model is still able to generate useful docstrings. It is possible that there is some niche where models must be quickly built on the fly, and our experiment has shown that there are possibilities for developing useful models where speed is preferred to accuracy. 
 
 	\section{Introduction}
 	\paragraph{} In an era of LLM-based revolution, many are exploring the endless possibilities of using artificial intelligence to aid in software development. This comes as no surprise considering the astounding need for software in nearly every aspect of modern industry. \cite{emerald2019csrImpact} With a dramatic increase in the need for software, some of the hottest topics being explored are the potential of enhancing the software development process, creating new tools as well as enhancing the old, and even automating certain aspects of writing code (See Section 3: Related Work). 
