--- a/article/report.tex
+++ b/article/report.tex
@@ -109,10 +109,10 @@ tabsize=2
 	\paragraph{} Even with only a single epoch, we were able to generate the following docstring: “Wrap an environment into a deepmind environment.” , with the True string being “ Configure environment for DeepMind-style Atari.” Even though it is not perfect, this is a promising result, as it shows that our model is able to generate a docstring that is both accurate and concise. We believe that with more training, our model could generate even more accurate and useful docstrings. Using a simple Evaluation: Score = (Number of overlapping words)/(Total Unique Words in Both strings) the score is 0.09 or 9\%. Using Bleu evaluation, geometric mean of modified precision scores multiplied by a brevity penalty(Penalizes short candidate sentences) we are getting a 0.033 or a 3.3\% and using rouge (Recall-Oriented Understudy for Gisting) Evaluation, which is focuses on recall, precision, and F-measure of n-gram overlaps, as well as longest common subsequences(rougeL): (rouge1, .285), (rouge2, 0), (rougeL, .285).
 
 	\section{Discussion}
-	\paragraph{} Our model scores horribly compared to other general models such as ChatGPT-4 with a BLEU score of 0.88 and MateCat with a BLEU score of 0.82. \cite{ghassemiazghandi2024evaluation} This is to be expected, however, as our model was trained with a very limited number of epochs on a smaller dataset. It is interesteing to observe that we still got a competent docstring that, while not fully accurate, still conveys the general idea of the code. 
+	\paragraph{} Our model scores horribly compared to other general models such as ChatGPT-4 with a BLEU score of 0.88 and MateCat with a BLEU score of 0.82. \cite{ghassemiazghandi2024evaluation} This is to be expected, however, as our model was trained with a very limited number of epochs on a smaller dataset. It is interesteing to observe that we still got a competent docstring that, while not fully accurate, still conveys the general idea of the code. This is a promising result, as it shows that even with limited resources, it is possible to generate useful docstrings. With an astoundingly low training time of just a few hours on weak hardware, models like ours could be used on code for quick and dirty documentation where complexity and maintainability is not a concern.
 
 	\section{Conclusion}
-	<++>
+	\paragraph{} The results of this project showed that it's possible to use machine learning to generate Python documentation, even with limited resources. While our model's scores were far from perfect and didn’t match up to more advanced models like ChatGPT-4, it still managed to produce docstrings that were relevant and on-topic. This proves the concept works, with more training time and optimized parameters there's a lot of potential for improving the results. In the future, models like this could play a big role in making the process of creating software documentation faster and more efficient.
 
 	\section{Future Work}
 	\paragraph{} Our greatest challenges with this experiment were definitely a lack of computational resources and time. We would like to explore the potential of using a larger dataset, as well as training for more epochs. We would also like to explore the potential of using a larger model, such as the Salesforce/codet5-large model. We would also like to explore the potential of using a different optimizers, such as the SGD optimizer. With more time and computational power, we might be able to find a convergence on a more optimal solution using SGD. We might also try SGD with momentum if we still find ourselves limited on resources in the future to help reach a balance between optimal convergence and resource usage.
