--- a/DocstringGen/DocStringGen2.ipynb
+++ b/DocstringGen/DocStringGen2.ipynb
@@ -1185,6 +1185,32 @@
     "\n",
     "print(scores)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "60a92d58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BLEU Score: 0.033031643180138064\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.translate.bleu_score import sentence_bleu, SmoothingFunction\n",
+    "\n",
+    "\n",
+    "reference = [[\"Configure\", \"environment\", \"for\", \"DeepMind-style\", \"Atari\"]]\n",
+    "candidate = [\"Wrap\", \"an\", \"environment\", \"into\", \"a\", \"deepmind\", \"environment\"]\n",
+    "\n",
+    "bleu_score = sentence_bleu(reference, candidate, smoothing_function=SmoothingFunction().method1)\n",
+    "\n",
+    "print(f\"BLEU Score: {bleu_score}\")\n"
+   ]
   }
  ],
  "metadata": {
