Clean up directories

--- a/DocstringGen/DocStringGen.ipynb
+++ b/DocstringGen/DocStringGen.ipynb
@@ -1129,11 +1129,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1390c88b",
+   "execution_count": 2,
+   "id": "0754057e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#!pip install rouge_score nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1390c88b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'rouge1': Score(precision=0.2857142857142857, recall=0.3333333333333333, fmeasure=0.30769230769230765), 'rouge2': Score(precision=0.0, recall=0.0, fmeasure=0.0), 'rougeL': Score(precision=0.2857142857142857, recall=0.3333333333333333, fmeasure=0.30769230769230765)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from rouge_score import rouge_scorer\n",
+    "\n",
+    "\n",
+    "scorer = rouge_scorer.RougeScorer(['rouge1', 'rouge2', 'rougeL'], use_stemmer=True)\n",
+    "scores = scorer.score(\"Configure environment for DeepMind-style Atari.\",\n",
+    "                      \"Wrap an environment into a deepmind environment.\")\n",
+    "\n",
+    "print(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "60a92d58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BLEU Score: 0.033031643180138064\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.translate.bleu_score import sentence_bleu, SmoothingFunction\n",
+    "\n",
+    "\n",
+    "reference = [[\"Configure\", \"environment\", \"for\", \"DeepMind-style\", \"Atari\"]]\n",
+    "candidate = [\"Wrap\", \"an\", \"environment\", \"into\", \"a\", \"deepmind\", \"environment\"]\n",
+    "\n",
+    "bleu_score = sentence_bleu(reference, candidate, smoothing_function=SmoothingFunction().method1)\n",
+    "\n",
+    "print(f\"BLEU Score: {bleu_score}\")\n"
+   ]
   }
  ],
  "metadata": {
