--- a/article/report.tex
+++ b/article/report.tex
@@ -101,18 +101,18 @@ tabsize=2
 		\item accelerate
 		\item evaluate
 	\end{itemize}
-	\paragraph{} For our dataset, we used the google/code\_x\_glue\_ct\_code\_to\_text dataset available here: https://huggingface.co/datasets/google/code\_x\_glue\_ct\_code\_to\_text. We made use of the RobertaTokenizer for preprocessing; specifically we began with the pretrained Salesforce/codet5-small model for some starting weights. Due to time constraints, we decided to skip the examples in the dataset so as to make our training time feasible on our hardware. To pad tokens, we used a value of -100 for our labels so as to avoid reduced model performance. 
+	\paragraph{} For our dataset, we used the google/code\_x\_glue\_ct\_code\_to\_text dataset available here: https://huggingface.co/datasets/google/code\_x\_glue\_ct\_code\_to\_text. We made use of the RobertaTokenizer for preprocessing; specifically we began with the pre-trained Salesforce/codet5-small model for some starting weights. Due to time constraints, we decided to skip the examples in the dataset so as to make our training time feasible on our hardware. To pad tokens, we used a value of -100 for our labels so as to avoid reduced model performance. 
 	\paragraph{} We selected a batch size of 16 for our training dataset, and a batch size of 8 for both our validation and testing datasets so as to avoid running out of memory on our selected hardware. We then used the T5 model from the Hugging Face Transformers library to train our model on Colorado State University's computer science department machines. We decided to go with Roberta Tokenizer since it creates byte-level Byte-Pair-Encoding, suitable for our base model. Additionally, we used the accelerate library to speed up training. Finally, we used the evaluate library to evaluate our model.
-	\paragraph{} We unfortunately found that higher values used as hyper parameters, particularly those used in the number of epochs, drastically increased our training time. With our limited time, we decided to move forward with a proof-of-concept using a number of epochs equal to one with zero warmup steps being used. Using CUDA, we trained our model primarily on our available GPUs using the AdamW optimizer.
+	\paragraph{} We unfortunately found that higher values used as hyper parameters, particularly those used in the number of epochs, drastically increased our training time. With our limited time, we decided to move forward with a proof-of-concept using a number of epochs equal to one with zero warm-up steps being used. Using CUDA, we trained our model primarily on our available GPUs using the AdamW optimizer.
 
 	\section{Results}
 	\paragraph{} Even with only a single epoch, we were able to generate the following docstring: “Wrap an environment into a deepmind environment.” , with the True string being “ Configure environment for DeepMind-style Atari.” Even though it is not perfect, this is a promising result, as it shows that our model is able to generate a docstring that is both accurate and concise. We believe that with more training, our model could generate even more accurate and useful docstrings. Using a simple Evaluation: Score = (Number of overlapping words)/(Total Unique Words in Both strings) the score is 0.09 or 9\%. Using Bleu evaluation, geometric mean of modified precision scores multiplied by a brevity penalty(Penalizes short candidate sentences) we are getting a 0.033 or a 3.3\% and using rouge (Recall-Oriented Understudy for Gisting) Evaluation, which is focuses on recall, precision, and F-measure of n-gram overlaps, as well as longest common subsequences(rougeL): (rouge1, .285), (rouge2, 0), (rougeL, .285).
 
 	\section{Discussion}
-	\paragraph{} Our model scores horribly compared to other general models such as ChatGPT-4 with a BLEU score of 0.88 and MateCat with a BLEU score of 0.82. \cite{ghassemiazghandi2024evaluation} This is to be expected, however, as our model was trained with a very limited number of epochs on a smaller dataset. It is interesteing to observe that we still got a competent docstring that, while not fully accurate, still conveys the general idea of the code. This is a promising result, as it shows that even with limited resources, it is possible to generate useful docstrings. With an astoundingly low training time of just a few hours on weak hardware, models like ours could be used on code for quick and dirty documentation where complexity and maintainability is not a concern.
+	\paragraph{} Our model scores horribly compared to other general models such as ChatGPT-4 with a BLEU score of 0.88 and MateCat with a BLEU score of 0.82. \cite{ghassemiazghandi2024evaluation} This is to be expected, however, as our model was trained with a very limited number of epochs on a smaller dataset. It is interesting to observe that we still got a competent docstring that, while not fully accurate, still conveys the general idea of the code. This is a promising result, as it shows that even with limited resources, it is possible to generate useful docstrings. With an astoundingly low training time of just a few hours on weak hardware, models like ours could be used on code for quick and dirty documentation where complexity and maintainability is not a concern.
 
 	\section{Conclusion}
-	\paragraph{} The results of this project showed that it's possible to use machine learning to generate Python documentation, even with limited resources. While our model's scores were far from perfect and didn’t match up to more advanced models like ChatGPT-4, it still managed to produce docstrings that were relevant and on-topic. This proves the concept works, with more training time and optimized parameters there's a lot of potential for improving the results. In the future, models like this could play a big role in making the process of creating software documentation faster and more efficient.
+	\paragraph{} The results of this project showed that it's possible to use machine learning to generate Python documentation, even with limited resources. While our model's scores were far from perfect and didn't match up to more advanced models like ChatGPT-4, it still managed to produce docstrings that were relevant and on-topic. This proves the concept works, with more training time and optimized parameters there's a lot of potential for improving the results. In the future, models like this could play a big role in making the process of creating software documentation faster and more efficient.
 
 	\section{Future Work}
 	\paragraph{} Our greatest challenges with this experiment were definitely a lack of computational resources and time. We would like to explore the potential of using a larger dataset, as well as training for more epochs. We would also like to explore the potential of using a larger model, such as the Salesforce/codet5-large model. We would also like to explore the potential of using a different optimizers, such as the SGD optimizer. With more time and computational power, we might be able to find a convergence on a more optimal solution using SGD. We might also try SGD with momentum if we still find ourselves limited on resources in the future to help reach a balance between optimal convergence and resource usage.
