Remove format breaking link

--- a/article/report.tex
+++ b/article/report.tex
@@ -101,7 +101,7 @@ tabsize=2
 		\item accelerate
 		\item evaluate
 	\end{itemize}
-	\paragraph{} For our dataset, we used the google/code\_x\_glue\_ct\_code\_to\_text dataset available here: https://huggingface.co/datasets/google/code\_x\_glue\_ct\_code\_to\_text. We made use of the RobertaTokenizer for preprocessing; specifically we began with the pre-trained Salesforce/codet5-small model for some starting weights. Due to time constraints, we decided to skip the examples in the dataset so as to make our training time feasible on our hardware. To pad tokens, we used a value of -100 for our labels so as to avoid reduced model performance. 
+	\paragraph{} For our dataset, we used the google/code\_x\_glue\_ct\_code\_to\_text dataset. We made use of the RobertaTokenizer for preprocessing; specifically we began with the pre-trained Salesforce/codet5-small model for some starting weights. Due to time constraints, we decided to skip the examples in the dataset so as to make our training time feasible on our hardware. To pad tokens, we used a value of -100 for our labels so as to avoid reduced model performance. 
 	\paragraph{} We selected a batch size of 16 for our training dataset, and a batch size of 8 for both our validation and testing datasets so as to avoid running out of memory on our selected hardware. We then used the T5 model from the Hugging Face Transformers library to train our model on Colorado State University's computer science department machines. We decided to go with Roberta Tokenizer since it creates byte-level Byte-Pair-Encoding, suitable for our base model. Additionally, we used the accelerate library to speed up training. Finally, we used the evaluate library to evaluate our model.
 	\paragraph{} We unfortunately found that higher values used as hyper parameters, particularly those used in the number of epochs, drastically increased our training time. With our limited time, we decided to move forward with a proof-of-concept using a number of epochs equal to one with zero warm-up steps being used. Using CUDA, we trained our model primarily on our available GPUs using the AdamW optimizer.
 
